Update API to 1.3.6
